Deleted defer attribute, not working...

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         </h2>
     </div>
     <canvas id="screen" style="background-color: black; visibility: hidden;" width="600" height="400"></canvas>
-    <script src="socket.io/socket.io.js" defer></script>
+    <script src="socket.io/socket.io.js"></script>
     <script src="index.js"></script>
 </body>
 
