--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
 
 <body>
     <div id="main" class="wrapper">
-        <h2 id="create-lobby">
+        <h2 id="create-lobby" style="text-align: center;">
             <a href="#" class="effect-underline detext">Create Lobby</a>
         </h2>
         <br>
-        <h2 id="join-lobby">
+        <h2 id="join-lobby" style="text-align: center;">
             <a href="#" class="effect-underline detext">Join Lobby</a>
         </h2>
     </div>
